--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "ecommerce application for furnitures and interior decors",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon server.js",
     "format": "npx prettier --write ."
   },
-  "author": "",
+  "author": "Mohammed Mishal",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "prettier": "^2.7.1"
