--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "moment": "^2.29.4",
     "mongoose": "^5.13.15",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
