--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "moment": "^2.29.4",
     "mongoose": "^5.13.15",
     "morgan": "^1.10.0",
