--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.13.15",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "razorpay": "^2.8.4",
     "twilio": "^3.83.2",
     "validator": "^13.7.0"
   },
