--- a/package.json
+++ b/package.json
@@ -24,11 +24,19 @@
     "mongoose": "^5.13.15",
     "multer": "^1.4.5-lts.1",
     "razorpay": "^2.8.4",
-    "twilio": "^3.83.2",
+    "twilio": "^2.5.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "eslint": "^8.30.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
     "morgan": "^1.10.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.8.1"
   }
 }
